--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 
     <div class="error-container">
         <div class="error-content">
-            <img src="images/404error.png" alt="Rat explorateur perdu dans la jungle" class="error-illustration">
+            <img src="images/404error.png" alt="elephant perdu" class="error-illustration">
             
             <h1 class="error-title">
                 <span class="digit">4</span>
