--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         Si vous appréciez notre travail et souhaitez nous soutenir, 
         vous pouvez contribuer par un petit don. 💚
     </p>
-    <a href="LIEN_VERS_PAGE_DON" target="_blank" class="cta-button">
+    <a href="https://paypal.me/doushouqilesa" target="_blank" class="cta-button">
         Soutenir le projet
     </a>
 </section>
