--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="hero">
         <div class="hero-content">
             <img class="img-logo" src="images/logo.png" alt="Logo DouShou Qi" class="logo">
-            <h1>Doushou Qi</h1>
+            <h1>DouShou Qi</h1>
             <h1>La loi de la jungle entre vos mains.</h1>
             <p>Un jeu de stratégie ancestral où seuls les plus rusés survivent.</p>
             <a href="#download" class="cta-button">Télécharger le Jeu</a>
@@ -148,61 +148,79 @@
 </section>
 
 
-<section id="about">
-    <h2>À propos du projet</h2>
-    <p>
-        <strong>DouShou Qi – Le Jeu de la Jungle</strong> est un projet passionné, 
-        développé par une petite équipe de jeunes bénévoles.  
-        Notre objectif ? Faire découvrir (ou redécouvrir) ce jeu ancestral à un maximum de joueurs, 
-        dans un esprit de convivialité et de partage. 🌿
-    </p>
-    <p>
-        Nous ne cherchons pas le profit : nous développons ce jeu avant tout 
-        pour apprendre, nous amuser et faire plaisir à la communauté.  
-        C’est pourquoi <strong>le jeu ne contient aucune publicité</strong> afin de préserver une 
-        expérience utilisateur fluide et agréable. ✨
-    </p>
-    <p>
-        Vos retours sont précieux ! 🙌  
-        N’hésitez pas à nous envoyer vos idées, suggestions ou critiques constructives 
-        afin que nous puissions améliorer le jeu ensemble.
-    </p>
-    <p>
-        Si vous appréciez notre travail et souhaitez nous soutenir, 
-        vous pouvez contribuer par un petit don. 💚
-    </p>
-    <a href="https://paypal.me/doushouqilesa" target="_blank" class="cta-button">
-        Soutenir le projet
-    </a>
-</section>
+    <section id="about">
+        <h2>À propos du projet</h2>
+        <p>
+            <strong>DouShou Qi – Le Jeu de la Jungle</strong> est un projet passionné, 
+            développé par une petite équipe de jeunes bénévoles.  
+            Notre objectif ? Faire découvrir (ou redécouvrir) ce jeu ancestral à un maximum de joueurs, 
+            dans un esprit de convivialité et de partage. 🌿
+        </p>
+        <p>
+            Nous ne cherchons pas le profit : nous développons ce jeu avant tout 
+            pour apprendre, nous amuser et faire plaisir à la communauté.  
+            C’est pourquoi <strong>le jeu ne contient aucune publicité</strong> afin de préserver une 
+            expérience utilisateur fluide et agréable. ✨
+        </p>
+        <p>
+            Vos retours sont précieux ! 🙌  
+            N’hésitez pas à nous envoyer vos idées, suggestions ou critiques constructives 
+            afin que nous puissions améliorer le jeu ensemble.
+        </p>
+        <p>
+            Si vous appréciez notre travail et souhaitez nous soutenir, 
+            vous pouvez contribuer par un petit don. 💚
+        </p>
+        <a href="https://paypal.me/doushouqilesa" target="_blank" class="cta-button">
+            Soutenir le projet
+        </a>
+    </section>
 
-        <section id="download">
-    <h2>Prêt à dominer la Jungle ?</h2>
-    <p>
-        Le moment est venu de mettre vos talents de stratège à l’épreuve. 
-        Saurez-vous protéger votre tanière, déjouer les ruses de l’adversaire 
-        et mener vos bêtes vers la victoire ? 🌿
-    </p>
-    <p>
-        <strong>DouShou Qi</strong> n’est pas seulement un jeu, c’est une 
-        véritable aventure où chaque décision compte. 
-        Que vous soyez un joueur occasionnel ou un compétiteur acharné, 
-        la jungle vous mettra au défi !
-    </p>
-    <ul style="max-width:600px; margin:30px auto; text-align:left; line-height:1.8;">
-        <li>🐘 Dirigez <strong>8 animaux aux pouvoirs uniques</strong></li>
-        <li>🌊 Exploitez le <strong>terrain</strong> : rivières, pièges et tanières</li>
-        <li>⚔️ Affrontez vos amis dans des <strong>duels stratégiques</strong></li>
-        <li>🏆 Prouvez que vous êtes le <strong>roi de la jungle</strong></li>
-    </ul>
-    <p>
-        Téléchargez le jeu gratuitement et entrez dans la légende !
-    </p>
-    <a href="LIEN_VERS_LE_PLAY_STORE" target="_blank">
-        <img src="images/Google_Play_Store_badge_FR.png" alt="Disponible sur Google Play" class="store-badge">
-    </a>
-</section>
+    <section id="download">
+        <h2>Prêt à dominer la Jungle ?</h2>
+        <p>
+            Le moment est venu de mettre vos talents de stratège à l’épreuve. 
+            Saurez-vous protéger votre tanière, déjouer les ruses de l’adversaire 
+            et mener vos bêtes vers la victoire ? 🌿
+        </p>
+        <p>
+            <strong>DouShou Qi</strong> n’est pas seulement un jeu, c’est une 
+            véritable aventure où chaque décision compte. 
+            Que vous soyez un joueur occasionnel ou un compétiteur acharné, 
+            la jungle vous mettra au défi !
+        </p>
+        <ul style="max-width:600px; margin:30px auto; text-align:left; line-height:1.8;">
+            <li>🐘 Dirigez <strong>8 animaux aux pouvoirs uniques</strong></li>
+            <li>🌊 Exploitez le <strong>terrain</strong> : rivières, pièges et tanières</li>
+            <li>⚔️ Affrontez vos amis dans des <strong>duels stratégiques</strong></li>
+            <li>🏆 Prouvez que vous êtes le <strong>roi de la jungle</strong></li>
+        </ul>
+        <p>
+            Téléchargez le jeu gratuitement et entrez dans la légende !
+        </p>
+        <a href="LIEN_VERS_LE_PLAY_STORE" target="_blank">
+            <img src="images/Google_Play_Store_badge_FR.png" alt="Disponible sur Google Play" class="store-badge">
+        </a>
+    </section>
+
+
+
+    <section>
+        <h2>Mises à jours</h2>
+        <p><strong>DouShou Qi</strong> est maintenant en 2.0.0</p>
+
+       
+        <a href="update.html" class="cta-button">
+            Voir les nouveautés
+        </a>
+    </section>
+
     </main>
+
+
+
+
+
 
     <footer>
         <p>© 2025 Lesa - L'Aventure DouShou Qi. Tous droits réservés.</p>
